# Python_Projects

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  main.py  pyproject.toml  readme_OOPs.md
Advent_of_code/Advent_2025/01_Santa_password/: 01_cypher.py
Advent_of_code/Advent_2025/02_/: main.py
Advent_of_code/Advent_2025/03_/: main.py
BEGINNER_STUFF/01_File_Organizer/: File_Organizer.py  Readme.md
BEGINNER_STUFF/02_Typing_Speed_Test/: Readme.md  typing_test.py
BEGINNER_STUFF/04_Image_ASCII/: main.py
BEGINNER_STUFF/05_Text_ASCII/: main.py
DSA/: readme.md  readme_1.md
DSA/00_BIG O/: Space_Complexity.py  Time_Complexity.py
DSA/01_ARRAY/: test_two_sum.py
DSA/01_ARRAY/QUESTIONs/: main.py
DSA/05_Queue/: 03_pririty_queue.py  main.py
DSA/06_Resursin/: main.py  main_1.py
DSA/07_Trees/: BST.py  main.py  tree.ipynb
OOPs/01_PointND_Geometric_Operations/: PointNDGeometricOperations.py  main.py
OOPs/02_Library_Catalog_System/: LibraryCatalogSystem.py  catalog.csv
OOPs/03_Student_Academic_Manager/: StudentAcademicManager.py
OOPs/05_Bank_Account_Manager/: BankAccountManager.py  BankAccountManager_1.py
OOPs/06_Complex_Number/: complex_number.py
OOPs/06_Temperature_Controller/: 06_Temperature_Controller.py
OOPs/07_Secure_Password_Manager/: Secure_Password_Manager.py
OOPs/09_Circle_Geometry/: Circle_Geometry.py  reference.md  solution.py
OOPs/10_Email_Address_Validator/: Email_Address_Validator.py
OOPs/11_Shape/: Shape.py  solution.py
OOPs/12_Employee/: employee.py  solution.py
OOPs/13_Vehicle/: vehicle.py
OOPs/14_Animal_Behavior_Simulator/: animal_behavior.py  solutions.py
Sql_Projects/: README.md
Sql_Projects/00_Tutorial/: 01_basic.py
Sqlite_pr/: README.md
Sqlite_pr/01_MovieDB/: MovieDB.db  main.py  moviedb.py
Sqlite_pr/tutorial/: main.py  tutorial.db
(+96 files in other folders)
