[project]
name = "python-projects"
version = "0.1.0"
description = "A collection of Python projects from beginner to advanced"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "art>=6.5",
  "ascii-magic>=2.3.0",
  "pymupdf>=1.26.3",
  "rich>=14.1.0",
  "sqlalchemy>=2.0.43",
  "ty>=0.0.1a17",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.3"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["__pycache__", "*.db", "*.pyc"]
preview = true                                    # Enable experimental rules

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]   # ignore line length if formatting is handled separately

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# [build-system]
# requires = ["uv"]
# build-backend = "uv"
